# teknoholePIP

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/teknohole/: __init__.py  main.py
src/teknohole/web/: __init__.py  client.py
